force-app/main/default/objects/Case/fields/Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Car_Brand__c</fullName>
    <label>Car Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>