force-app/main/default/objects/Case/fields/Car_Vin_Code__c.field-meta.xml
<CustomField>
    <fullName>Car_Vin_Code__c</fullName>
    <label>Car Vin Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>